<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_task2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.m1m2.layoutsdemo.Task2Activity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/button_row1"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/darker_gray"
        android:text="@string/button_row1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/button_row2"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/darker_gray"
        android:text="@string/button_row2"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/button_row3c1"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/button_row3c1"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/button_row3c2"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/button_row3c2"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/button_row4c1"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/button_row4c1"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/button_row4c2"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/button_row4c2"/>


            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/button_row34c34"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@android:color/darker_gray"
            android:text="@string/button_row34c34"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:id="@+id/button_row5"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/darker_gray"
        android:text="@string/button_row5"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/button_row6c1"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@android:color/darker_gray"
            android:text="@string/button_row6c1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/button_row6c2"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@android:color/darker_gray"
            android:text="@string/button_row6c2"/>

    </LinearLayout>



</LinearLayout>
