<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.m1m2.layoutsdemo.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer_name"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/darker_gray"
        android:id="@+id/tv_developer_name"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_margin="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_number"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/tv_developer_name"
        android:id="@+id/tv_course"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_margin="8dp"
        android:layout_marginTop="0dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/school_name"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/tv_course"
        android:id="@+id/tv_school_name"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_margin="8dp"
        android:layout_marginTop="0dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/tv_school_name"
        android:id="@+id/img_me"
        android:layout_margin="8dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:layout_below="@id/img_me"
        android:layout_marginTop="16dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/task1_name"
            android:id="@+id/button_task1"
            android:textAppearance="@android:style/TextAppearance.Large"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/button_task2"
            android:text="@string/task2_name"
            android:textAppearance="@android:style/TextAppearance.Large"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/button_task3"
            android:text="@string/task3_name"
            android:textAppearance="@android:style/TextAppearance.Large"/>

    </LinearLayout>
</RelativeLayout>
